--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "react-gif-app-vite",
-  "private": true,
   "version": "1.0.0",
-  "type": "module",
+  "description": "A React app of gif's",
+  "main": "/src/main.jsx",
+  "author": "Felipe Navas",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Felipe-Navas/react-gif-app-vite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Felipe-Navas/react-gif-app-vite/issues"
+  },
+  "homepage": "https://github.com/Felipe-Navas/react-gif-app-vite",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "test": "jest --watchAll"
